Extend core services and tests for deck, tag, and review functionalities and all controllers